<resources>
    <string name="app_name">bananasplit</string>
    <string name="capture">Capture</string>
    <string name="test_camera">test camera</string>
    <string name="groups">Groups</string>
    <string name="Friends">Friends</string>
    <string name="Activity">Activity</string>
    <string name="you_are_owed">You paid</string>
    <string name="you_owe">You owe</string>
    <string name="total_balance">Total Balance</string>
    <string name="settle_up">Settle Up</string>
    <string name="balances">Balances</string>
    <string name="convert_currency">Convert Currency</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="expense">expense</string>
    <string name="date">date</string>
    <string name="person">Person</string>
    <string name="name_of_the_expense">Name of the Expense</string>
    <string name="done">Done</string>
    <string name="group_cover_image">group cover image\n</string>
    <string name="pick_image">Pick Image</string>
    <string name="duration">Duration</string>
    <string name="name">Name</string>
    <string name="placeholder">(Placeholder)</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_friends">Add Friends</string>
    <string name="update">Update</string>
    <string name="friend_name">Friend Name</string>
    <string name="create_friend">Create Friend</string>
    <string name="my_friends">My Friends</string>
    <string name="email">E-Mail</string>
    <string name="backButton">Back</string>
    <string name="save">Save</string>
    <string name="scan_receipt">Scan Receipt</string>
    <string name="or">-or-</string>
    <string name="split">, split</string>
    <string name="paid_by">Paid by</string>
    <string name="added_by">Added by</string>
    <string name="create_expense">Create Expense</string>
    <string name="create_group">Create Group</string>
    <string name="settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="select_specific_participants">Select specific Participants</string>
    <string name="confirm">Confirm</string>
    <string name="equal">Equal</string>
    <string name="string_equal">\@string/equal</string>
    <string name="choosePaymentMethod">Choose a payment method</string>
    <string name="payWithPayPal">Pay Via PayPal</string>
    <string name="payOther">Record Other Payment Method</string>
    <string name="transferMoney">Transfer Money</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="lets_get_started">Lets get started!</string>
    <string name="groupCurrency">Groups Currency</string>
    <string name="language">Language</string>
    <string name="defaultcurrency">Default Currency</string>
    <string name="user">User</string>
    <string name="setup">Set Up User</string>
    <string name="darkMode">Dark Mode</string>
    <string name="addexpense">Add Expense</string>
    <string name="addgroup">Add Group</string>
    <string name="camera_permission_denied">Camera Permissions have been denied</string>
    <string name="storage_permission_denied">Storage permissions have been denied</string>
    <string name="capture_successful">Capture successful, Processing receipt</string>
    <string name="capture_failed">Capture failed:</string>
    <string name="failed_to_recognize_text">Failed to recognize text</string>
    <string name="failed_to_analyze_text">Failed to analyze text</string>
    <string name="first_fragment_label" />
    <string name="second_fragment_label" />
    <string name="logPersonsAdded">added %s to %s</string>
    <string name="custom">Custom</string>
    <!-- Strings used for fragments for navigation -->

</resources>