<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/rectangle_at_the_top5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_at_the_top5"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_at_the_top5"
        app:layout_constraintStart_toStartOf="@+id/rectangle_at_the_top5"
        app:layout_constraintTop_toTopOf="@+id/rectangle_at_the_top5" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_at_the_top5">

        <TableRow
            android:id="@+id/row_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_settings"
            android:backgroundTint="@color/black"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/settings_tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_setup_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setup" />

        </TableRow>

        <TableRow
            android:id="@+id/row_language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_settings"
            android:backgroundTint="@color/black"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/settings_tv_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/language"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/settings_spinner_language"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+id/row_currency"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_settings"
            android:backgroundTint="@color/black"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/settings_tv_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/defaultcurrency"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/settings_spinner_currency"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+id/row_darkmode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_settings"
            android:backgroundTint="@color/black"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_darkmode"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/darkMode"
                android:textSize="20sp" />

        </TableRow>

    </TableLayout>

    <ImageButton
        android:id="@+id/settings_save"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:backgroundTint="?attr/colorPrimary"
        android:contentDescription="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:srcCompat="@drawable/save"
        app:tint="?attr/colorOnPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>